Bug 1610974 - Drop colorValue in LookAndFeelInt. r=geckoview-reviewers,snorp

It should have been dropped in bug 1606503, I did foget it.

Differential Revision: https://phabricator.services.mozilla.com/D60776