widget/LookAndFeel.h
@@ -18,10 +18,7 @@ struct gfxFontStyle;
 
 struct LookAndFeelInt {
   int32_t id;
-  union {
-    int32_t value;
-    nscolor colorValue;
-  };
+  int32_t value;
 };
 
 namespace mozilla {
