widget/android/nsLookAndFeel.cpp
@@ -528,8 +528,7 @@ nsTArray<LookAndFeelInt> nsLookAndFeel::GetIntCacheImpl() {
   const IntID kIdsToCache[] = {eIntID_PrefersReducedMotion};
 
   for (IntID id : kIdsToCache) {
-    lookAndFeelIntCache.AppendElement(
-        LookAndFeelInt{id, {.value = GetInt(id)}});
+    lookAndFeelIntCache.AppendElement(LookAndFeelInt{id, .value = GetInt(id)});
   }
 
   return lookAndFeelIntCache;
